--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html>
 
-    <head>
+<head>
 
+    <link rel="stylesheet" href="styles//default.css">
+    <meta charset="utf-8">
+    <title>Ash's projects</title>
 
+</head>
 
-    </head>
+<body>
 
-    <body>
+    <h1>trans rights!!</h1>
 
-        
+    <img alt="tbh creature in front of a trans flag" src="/assets/test.png">
 
-    </body>
+</body>
 
 </html>
