--- a/trans.html
+++ b/trans.html
@@ -3,7 +3,7 @@
 
 <head>
 
-    <link rel="stylesheet" href="styles//default.css">
+    <link rel="stylesheet" href="styles/trans.css">
     <meta charset="utf-8">
     <title>Ash's projects</title>
 
